# miasma

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  README.md  flake.nix
.github/workflows/: CD.yaml  CI.yml  Checks.yaml  Release.yaml  codeql.yml
docs/config_file/: README.md  config.json  config.toml  config.yaml
nix/: package.nix
src/: app.rs  art.rs  config.rs  error.rs  lib.rs  logger.rs  main.rs  main.rs.orig  router.rs  routes.rs  version_check.rs
src/cli/: app.rs  args.rs  art.rs  calculate_nodes.rs  config_file.rs  mod.rs  version_check.rs
src/metrics/: error.rs  metrics.css  metrics_counter.rs  miasma-swirl.txt  mod.rs  page.rs
src/poison/: fetch_poison.rs  gzip.rs  html_builder.rs  link_settings.rs  mod.rs  poison_client.rs  response_builder.rs  response_stream.rs  route.rs
src/poison/fallback_poison/: cpp_1.txt  cpp_2.txt  cpp_3.txt  cpp_4.txt  go_2.txt  go_4.txt  python_1.txt  python_2.txt  python_3.txt  python_4.txt  python_5.txt  python_6.txt  rust_1.txt  rust_2.txt  rust_3.txt  typescript_1.txt  typescript_2.txt  typescript_4.txt  typescript_5.txt  typescript_6.txt
src/response_templates/: ai_native.rs  cto_letter.rs  deep_dive.rs  engineering_blog.rs  mod.rs  novel_research.rs  research.rs  self_promotion.rs  streaming_marketing.rs
src/response_templates/research/: authors.rs  code_explanation.rs  conclusions.rs  field.rs  fluff.rs  intros.rs  link_headings.rs  research_topics.rs  slot.rs
src/response_templates/styles/: ai-native.css  code-blog.css  cto-letter.css  deep-dive.css  elegant.css  engineering-blog.css  novel-research.css  professor.css  self-promotion.css  simple.css  streaming-marketing.css  vibe-slop.css
src/routes/: html_builder.rs  poison.rs
src/templates/: README.md  ai_native.html  ai_native.rs  cto_letter.html  cto_letter.rs  deep_dive.html  deep_dive.rs  engineering_blog.html  engineering_blog.rs  link_titles.rs  mod.rs  novel_research.html  novel_research.rs  self_promotion.html  self_promotion.rs  streaming_marketing.html  streaming_marketing.rs  template.rs
src/templating/: mod.rs  template_builder.rs  template_iter.rs  template_part.rs  template_trait.rs  tone.rs  utils.rs
src/utils/: cow_helpers.rs  html_escaper.rs  mod.rs
