[package]
name = "miasma"
description = "Trap malicious AI web scrapers in an endless pit of poisoned training data."
version = "0.2.8"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/austin-weeks/miasma"
readme = "README.md"
exclude = [".github"]

[dependencies]
async-compression = { version = "0.4.41", features = ["gzip"] }
async-stream = "0.3.6"
axum = { version = "0.8.8", features = ["macros"] }
base64 = "0.22.1"
bytes = "1.11.1"
clap = { version = "4.6.0", features = ["derive", "env"] }
colored = "3.1.1"
derive_builder = "0.20.2"
diesel = { version = "2.3.9", features = ["sqlite"] }
fhtml = "0.6.1"
futures = "0.3.32"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "signal"] }
tokio-util = { version = "0.7.18", features = ["io"] }
url = "2.5.8"
uuid = { version = "1.22.0", features = ["v4"] }

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
http-body-util = "0.1.2"
gag = "1.0.0"
serial_test = "3.4.0"
scraper = "0.26.0"
tempfile = "3.27.0"

# On Linux, use default TLS
[target.'cfg(target_os = "linux")'.dependencies]
reqwest = { version = "0.13.2", default-features = false, features = ["default-tls", "gzip", "json", "http2", "charset", "system-proxy", "stream"] }
# On Mac & Windows, use native TLS
[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
reqwest = { version = "0.13.2", default-features = false, features = ["native-tls", "gzip", "json", "http2", "charset", "system-proxy", "stream"] }
# On Windows, bundle libsqlite
[target.'cfg(target_os = "windows")'.dependencies]
libsqlite3-sys = { version = "0.37.0", features = ["bundled"] }

# Optimize for smallest possible binary size
[profile.release]
codegen-units = 1
opt-level = "s"
lto = true
debug = false
strip = true
panic = "abort"
