[package]
name = "miasma"
description = "Trap malicious AI web scrapers in an endless pit of poisoned training data."
keywords = ["ai", "anti-ai", "web-scraping", "cli", "server"]
categories = ["artificial-intelligence", "command-line-utilities", "development-tools", "security"]
version = "0.4.0"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/austin-weeks/miasma"
readme = "README.md"
include = ["README.md", "LICENSE", "src", "Cargo.toml", "Cargo.lock"]

[dependencies]
async-compression = { version = "0.4.41", features = ["gzip"] }
async-stream = "0.3.6"
axum = { version = "0.8.8", features = ["macros"] }
base64 = "0.22.1"
bytes = "1.11.1"
clap = { version = "4.6.0", features = ["derive", "env"] }
colored = "3.1.1"
derive_builder = "0.20.2"
diesel = { version = "2.3.9", features = ["sqlite"] }
failsafe = "1.3.0"
fhtml = "0.6.1"
futures = "0.3.32"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "signal"] }
tokio-util = { version = "0.7.18", features = ["io"] }
toml = { version = "1.1.2", features = [ "serde" ] }
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.22.0", features = ["v4"] }

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
http-body-util = "0.1.2"
gag = "1.0.0"
serial_test = "3.4.0"
scraper = "0.26.0"
tempfile = "3.27.0"
temp-env = "0.3.6"

# On Linux, use default TLS
[target.'cfg(target_os = "linux")'.dependencies]
reqwest = { version = "0.13.2", default-features = false, features = ["default-tls", "gzip", "json", "http2", "charset", "system-proxy", "stream"] }
# On Mac & Windows, use native TLS
[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
reqwest = { version = "0.13.2", default-features = false, features = ["native-tls", "gzip", "json", "http2", "charset", "system-proxy", "stream"] }
# On Windows, bundle libsqlite
[target.'cfg(target_os = "windows")'.dependencies]
libsqlite3-sys = { version = "0.37.0", features = ["bundled"] }

[lints.clippy]
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cast_lossless = "allow"
must_use_candidate = "allow"
multiple_crate_versions = "allow"

# Optimize for smallest possible binary size
[profile.release]
codegen-units = 1
opt-level = "s"
lto = true
debug = false
strip = true
panic = "unwind"
